2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.DapCore/Makefile.am
	* src/Dap/Banshee.DapCore/Banshee.DapCore/AsyncDevice.cs:
	Added wrapper to make the calls to devices asynchronous
	  
2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/Device.cs:
	  Commented out my changes because i can't make em compile ;)
	 
2008-02-10  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Dap/Banshee.DapCore/Banshee.DapCore/IDevice.cs
	* src/Dap/Banshee.DapCore/Banshee.DapCore/AbstractDevice.cs
	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/Device.cs:
	  Updated the interface, implemented the abstract class and made
	  MassStorage inherit from AbstractDevice.
	  
2008-02-10  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Windowing.cs: Assures
	  that all rows in view are rendered.

2008-02-09  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Do not
	show the 'sort children' menu item if the source does not have children
	(thanks Scott)

2008-02-09  Aaron Bockover  <abock@gnome.org>

	This commit adds initial support to load/save the column settings in 
	the track list; it is not yet complete, also it adds a popup menu for
	the columns, but it's not done yet and doesn't work

	* src/Core/Hyena/Hyena/StringUtil.cs:
	* src/Backends/Banshee.Gnome/Banshee.Gnome/GConfConfigurationClient.cs:
	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs:
	* src/Core/Banshee.Core/Banshee.Base/StringUtil.cs: Moved StringUtil
	into Hyena

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/PersistentColumnController.cs:
	A wrapper around ColumnController that loads and saves through 
	Banshee.Configuration

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/TrackListView.cs:
	Use PersistentColumnController to load and save settings
